--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">NotesApp</string>
+    <string name="welcome_string">Hello! Login or register</string>
+    <string name="email">Email:</string>
+    <string name="password">Password:</string>
+    <string name="login_button">Login</string>
+    <string name="forgot_pass">Forgot password</string>
+    <string name="signUp">Sign Up</string>
+    <string name="register_string">Register</string>
+    <string name="fullName">Full Name:</string>
+    <string name="register_button">Register</string>
+    <string name="already_registered">Already registered? Sign in!</string>
 </resources>
